JDKを11へ変更し、コードフォーマットを実行